test/bad/basic/var3.px

if true:
    x = true
y = true and x
